added profiling dashboard html

--- a/src/main/resources/static/connector-signal.html
+++ b/src/main/resources/static/connector-signal.html
@@ -58,7 +58,7 @@
 </div>
 
 <div id="tableSelect" class="hidden">
-    <label for="table">Select Table:</label>
+    <label for="table">Select Table to profile:</label>
     <select id="table" onchange="showDashboard()">
         <!-- Options will be dynamically populated -->
     </select>
